--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,1 +1,8 @@
-<p>product-details works!</p>
+<h2>Product Details</h2>
+<div *ngIf="product">
+<p>{{ product.name }}</p>
+<p>{{ product.price }}</p>
+<p>{{ product.description }}</p>
+</div>
+
+
