*ngIf="product" reason

--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,4 +1,9 @@
 <h2>Product Details</h2>
+<!-- If you don't give ngIf directive here, it will throw error -->
+<!-- It can only show product details when you click any one of product list -->
+<!-- Otherwise, it won't get product details on the page -->
+<!-- Actual working is here -->
+<!-- It gets the product details with product id from route parameters. So, routing is strictly necessary -->
 <div *ngIf="product">
 <p>{{ product.name }}</p>
 <p>{{ product.price }}</p>
