--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -8,6 +8,7 @@
 <p>{{ product.name }}</p>
 <p>{{ product.price }}</p>
 <p>{{ product.description }}</p>
+<button type="button" (click)="addToCart(product)">Buy</button>
 </div>
 
 
